--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,105 @@
 {
-  "extends": "next/core-web-vitals"
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "jest": true
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
+  "ignorePatterns": [
+    "**/e2e/**"
+  ],
+  "overrides": [],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": ["react", "@typescript-eslint"],
+  "rules": {
+    "indent": ["error", 2, { "SwitchCase": 2 }],
+    "quotes": ["error", "single"],
+    "semi": ["error", "always"],
+    "no-inline-comments": "error",
+    "spaced-comment": ["error", "always"],
+    "no-mixed-spaces-and-tabs": ["error", "smart-tabs"],
+    "object-curly-newline": [
+      "warn",
+      {
+        "ObjectExpression": "always",
+        "ObjectPattern": {
+          "multiline": true
+        },
+        "ImportDeclaration": "never",
+        "ExportDeclaration": {
+          "multiline": true,
+          "minProperties": 3
+        }
+      }
+    ],
+    "object-curly-spacing": [
+      "warn",
+      "always",
+      {
+        "arraysInObjects": false,
+        "objectsInObjects": false
+      }
+    ],
+    "space-in-parens": ["warn", "never"],
+    "sort-imports": "off",
+    "no-duplicate-imports": "error",
+    "sort-vars": "warn",
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_"
+      }
+    ],
+    "no-use-before-define": [
+      "error",
+      {
+        "functions": true,
+        "classes": true,
+        "variables": true,
+        "allowNamedExports": false
+      }
+    ],
+    "comma-dangle": ["warn", "never"],
+    "comma-spacing": [
+      "warn",
+      {
+        "before": false,
+        "after": true
+      }
+    ],
+    "eol-last": ["warn", "always"],
+    "linebreak-style": ["error", "unix"],
+    "no-trailing-spaces": "error",
+    "no-multiple-empty-lines": "error",
+    "no-multi-spaces": "error",
+    "new-cap": [
+      "error",
+      {
+        "properties": false
+      }
+    ],
+    "max-len": [
+      "error",
+      {
+        "code": 120
+      }
+    ],
+    "no-console": [
+      "error",
+      {
+        "allow": ["warn", "error"]
+      }
+    ],
+    "no-alert": "error"
+  }
 }
